--- a/site/includes/components/timeline.njk
+++ b/site/includes/components/timeline.njk
@@ -1,158 +1,82 @@
 <div class="timeline">
     <div class="timeline__section">
         <a href="#002" class="timeline__marker timeline__marker--active">
-            <span>☂️</span>
+            <span>2000</span>
             <span class="timeline__ticker"></span></a>
     </div>
     <div class="timeline__section">
         <a href="" class="timeline__marker">
-            <span></span>
+            <span>2001</span>
             <span class="timeline__ticker"></span></a>
     </div>
     <div class="timeline__section">
         <a href="" class="timeline__marker">
-            <span></span>
+            <span>2002</span>
             <span class="timeline__ticker"></span></a>
     </div>
     <div class="timeline__section">
         <a href="" class="timeline__marker">
-            <span></span>
+            <span>2003</span>
             <span class="timeline__ticker"></span></a>
     </div>
     <div class="timeline__section">
         <a href="" class="timeline__marker">
-            <span></span>
+            <span>2004</span>
             <span class="timeline__ticker"></span></a>
     </div>
     <div class="timeline__section">
         <a href="" class="timeline__marker">
-            <span></span>
+            <span>2005</span>
             <span class="timeline__ticker"></span></a>
     </div>
     <div class="timeline__section">
         <a href="" class="timeline__marker">
-            <span></span>
+            <span>2006</span>
             <span class="timeline__ticker"></span></a>
     </div>
     <div class="timeline__section ">
         <a href="" class="timeline__marker timeline__marker--inactive">
-            <span></span>
+            <span>2008</span>
             <span class="timeline__ticker"></span></a>
     </div>
     <div class="timeline__section">
         <a href="" class="timeline__marker timeline__marker--inactive">
-            <span></span>
+            <span>2012</span>
             <span class="timeline__ticker"></span></a>
     </div>
     <div class="timeline__section">
         <a href="" class="timeline__marker">
-            <span></span>
+            <span>2013</span>
             <span class="timeline__ticker"></span></a>
     </div>
     <div class="timeline__section">
         <a href="" class="timeline__marker">
-            <span></span>
+            <span>2014</span>
             <span class="timeline__ticker"></span></a>
     </div>
     <div class="timeline__section">
         <a href="" class="timeline__marker">
-            <span></span>
+            <span>2015</span>
             <span class="timeline__ticker"></span></a>
     </div>
     <div class="timeline__section">
         <a href="" class="timeline__marker">
-            <span></span>
+            <span>2016</span>
             <span class="timeline__ticker"></span></a>
     </div>
     <div class="timeline__section">
         <a href="" class="timeline__marker">
-            <span></span>
+            <span>2017</span>
             <span class="timeline__ticker"></span></a>
     </div>
     <div class="timeline__section">
         <a href="" class="timeline__marker">
-            <span></span>
+            <span>2018</span>
             <span class="timeline__ticker"></span></a>
     </div>
     <div class="timeline__section">
         <a href="" class="timeline__marker">
-            <span></span>
+            <span>2019</span>
             <span class="timeline__ticker"></span></a>
     </div>
-    <div class="timeline__section">
-        <a href="" class="timeline__marker">
-            <span></span>
-            <span class="timeline__ticker"></span></a>
-    </div>
-    <div class="timeline__section">
-        <a href="" class="timeline__marker">
-            <span></span>
-            <span class="timeline__ticker"></span></a>
-    </div>
-    <div class="timeline__section">
-        <a href="" class="timeline__marker">
-            <span>🚛</span>
-            <span class="timeline__ticker"></span></a>
-    </div>
-    <div class="timeline__section">
-        <a href="" class="timeline__marker">
-            <span></span>
-            <span class="timeline__ticker"></span></a>
-    </div>
-    <div class="timeline__section">
-        <a href="" class="timeline__marker">
-            <span></span>
-            <span class="timeline__ticker"></span></a>
-    </div>
-    <div class="timeline__section">
-        <a href="" class="timeline__marker">
-            <span>🔬</span>
-            <span class="timeline__ticker"></span></a>
-    </div>
-    <div class="timeline__section">
-        <a href="" class="timeline__marker">
-            <span></span>
-            <span class="timeline__ticker"></span></a>
-    </div>
-    <div class="timeline__section">
-        <a href="" class="timeline__marker">
-            <span></span>
-            <span class="timeline__ticker"></span></a>
-    </div>
-    <div class="timeline__section">
-        <a href="" class="timeline__marker">
-            <span></span>
-            <span class="timeline__ticker"></span></a>
-    </div>
-    <div class="timeline__section">
-        <a href="" class="timeline__marker">
-            <span></span>
-            <span class="timeline__ticker"></span></a>
-    </div>
-    <div class="timeline__section">
-        <a href="" class="timeline__marker">
-            <span></span>
-            <span class="timeline__ticker"></span></a>
-    </div>
-    <div class="timeline__section">
-        <a href="" class="timeline__marker">
-            <span></span>
-            <span class="timeline__ticker"></span></a>
-    </div>
-    <div class="timeline__section">
-        <a href="" class="timeline__marker">
-            <span></span>
-            <span class="timeline__ticker"></span></a>
-    </div>
-    <div class="timeline__section">
-        <a href="" class="timeline__marker">
-            <span></span>
-            <span class="timeline__ticker"></span></a>
-    </div>
-    <div class="timeline__section">
-        <a href="" class="timeline__marker">
-            <span></span>
-            <span class="timeline__ticker"></span></a>
-    </div>
-
 </div>
