--- a/site/includes/layouts/answers.njk
+++ b/site/includes/layouts/answers.njk
@@ -1,4 +1,112 @@
 ---
 layout: default
 ---
-<h1>Answers</h1>
+
+<main id="main" class="main flex">
+    <aside class="w-1/4 p-6">
+        <a class="text-blue-500 hover:text-white hover:bg-iron py-2 px-4 rounded mb-6 inline-block" href="/narratives/narratives-1/timeline/">
+            <span>
+                <svg class="h-4 w-4 inline-block fill-current text-black mr-2" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="m3.828 9 6.071-6.071-1.414-1.414-8.485 8.485.707.707 7.778 7.778 1.414-1.414-6.071-6.071h16.172v-2z"/></svg>
+            </span>Back</a>
+        <h1>Answer Questions</h1>
+        <hr/>
+        <p>Based on your current narrative, your care team wants to ask a few more questions to better understand you.</p>
+    </aside>
+    <section class="w-3/4 h-screen min-h-full overflow-y-auto shadow-xl pt-4 p-12  bg-white">
+        <div class="min-h-full">
+
+            {% include 'components/timeline.njk' %}
+            <h2>September 20, 2019</h2>
+            {# start row #}
+            <section id="001" class="flex">
+
+                {# content area #}
+                <article class="w-4/6">
+                    {# Transcription example #}
+                    <div class="object mb-4">
+                        <span id="highlighted" class="text-xl">Highlighted: 0</span>
+
+                        <div id="words" class="words">
+                            <p>If your element contents contains child elements (HTML) then the above solutions are not useful.</p>
+                            <p>Here's a <strong class="jsfiddle">jsfiddle</strong> I've come up with that preserves HTML (elements and their attributes). The shortcoming of this small snippet is that if you have events binded to the element's contents then they will be lost since innerHTML is being reassigned to something else.</p>
+                            <p>This code does not require any special libraries (like <i>jQuery</i>).</p>
+                        </div>
+                    </div>
+
+                </article>
+                <aside class="w-2/6">
+                    <div class="pl-4">
+                        {# Comment Section #}
+                        <div class="border-grey-lighter border-b-2 mb-4">
+                            <h4 class="mb-3">Karren G.</h4>
+                            <p class="text-sm mb-2">
+                                <span>😀 </span>This code does not require any special libraries (like jQuery).</p>
+
+                            {# To loop thru #}
+                            <ul class="mb-4">
+                                <li class="text-grey-darker text-sm font-medium">Questions: event</li>
+                                <li class="text-grey-darker text-sm font-medium">Sentence: event</li>
+                                <li class="text-grey-darker text-sm font-medium">Sentence: event</li>
+                                <li class="text-grey-darker text-sm font-medium">Sentence: event</li>
+                                <li class="text-grey-darker text-sm font-medium">Sentence: event</li>
+                            </ul>
+                            <div class="flex justify-between">
+                                <h6 class="mb-2 text-xs text-grey-dark">Posted: <span class="inline-block text-blue">latest</span></h6>
+                                <h6 class="mb-2 text-xs text-grey-dark">Original: <span class="inline-block text-blue">old</span></h6>
+                            </div>
+                            {# Messages #}
+                            <div class="">
+                                <div class="">
+                                    <div class="flex justify-between">
+                                        <h6 class="mb-2 text-xs text-grey-dark">Posted: <span class="inline-block text-blue">latest</span></h6>
+                                        <h6 class="mb-2 text-xs text-grey-dark">Original: <span class="inline-block text-blue">old</span></h6>
+                                    </div>
+                                    <p class="mb-6 text-grey-darker font-medium text-sm bg-grey-lightest">This code does not require any special libraries (like jQuery).</p>
+                                </div>
+                            </div>
+                        </div>
+                        {# Reply to Thread #}
+                        <div>
+                            <h5 class="text-blue text-xs text-wide tracking-wide font-bold uppercase mb-2">My Response</h5>
+                            <textarea class="text-sm appearance-none block w-full text-grey-darker border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white" id="story" name="story" rows="5" cols="33"></textarea>
+                        </div>
+                        <a href="" class="inline-block bg-iron uppercase font-bold text-sm py-2 mb-3">Submit</a>
+                        <a href="" class="inline-block uppercase font-bold text-sm py-2 mb-3">Delete</a>
+                    </div>
+                </aside>
+            </section>
+            {# /end row #}
+        </div>
+    </section>
+
+    <div class="fixed flex justify-between bottom-0 right-0 w-3/4 py-5 px-6 bg-white border-t-2 border-iron">
+        <a href="/narratives/narratives-1/questions{{ prev }}" class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Previous</a>
+        <div class="w-full mx-8 flex justify-center">
+            <div class="flex w-full pb-3">
+
+                {% for post in collections.question %}
+
+                    <div class="flex-grow-0 self-center">
+
+                        {% if page.url == post.url %}{% endif %}
+                        <a href="{{ post.url }}" class="{% if page.url == post.url %} bg-blue-500 {% endif %} w-4 h-4 bg-iron mx-auto rounded-full text-lg text-white flex items-center">
+                            <span class="text-white text-center w-full"></span>
+                        </a>
+                    </div>
+                    <div class="w-1/6 align-center items-center align-middle content-center flex">
+                        <div class="w-full bg-iron items-center align-middle align-center flex-1">
+                            <div class="leading-none h-1" style="width: 100%"></div>
+                        </div>
+                    </div>
+                {% endfor %}
+
+                <div class="flex-grow-0 self-center">
+                    <div class="w-4 h-4 bg-iron mx-auto rounded-full text-lg text-white flex items-center">
+                        <span class="text-white text-center w-full"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <a href="/narratives/narratives-1/questions{{ next }}" class=" bg-blue-400 hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Next</a>
+    </div>
+</main>
