--- a/site/includes/layouts/questions.njk
+++ b/site/includes/layouts/questions.njk
@@ -23,7 +23,7 @@ layout: default
     <div class="fixed flex justify-between bottom-0 right-0 w-3/4 py-5 px-6 bg-white border-t-2 border-iron">
         <a href="/narratives/narratives-1/questions{{ prev }}" class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Previous</a>
         <div class="w-full mx-8 flex justify-center">
-            <div class="flex w-full pb-3">
+            <div class="flex w-full">
 
                 {% for post in collections.question %}
 
