--- a/site/includes/layouts/answers.njk
+++ b/site/includes/layouts/answers.njk
@@ -16,7 +16,7 @@ layout: default
         <div class="min-h-full">
 
             {% include 'components/timeline.njk' %}
-            <h2>September 20, 2019</h2>
+            <h2 class="text-black text-3xl mt-4">September 20, 2019</h2>
             {# start row #}
             <section id="001" class="flex">
 
@@ -37,41 +37,53 @@ layout: default
                 <aside class="w-2/6">
                     <div class="pl-4">
                         {# Comment Section #}
-                        <div class="border-grey-lighter border-b-2 mb-4">
-                            <h4 class="mb-3">Karren G.</h4>
-                            <p class="text-sm mb-2">
-                                <span>😀 </span>This code does not require any special libraries (like jQuery).</p>
+                        <div class="border-grey-lighter">
 
-                            {# To loop thru #}
-                            <ul class="mb-4">
+                            <div class="shadow-lg pt-4 p-3 rounded bg-beige border-t-2 border-orange-400 mb-6 relative z-50">
+                                <h4 class="mb-3">Karren G.</h4>
+                                <p class="text-sm mb-2 italic">
+                                    <span class="not-italic">😀 </span>Hey this seems like this really hurt you?</p>
+
+                                {# To loop thru #}
+                                {# <ul class="mb-4">
                                 <li class="text-grey-darker text-sm font-medium">Questions: event</li>
                                 <li class="text-grey-darker text-sm font-medium">Sentence: event</li>
                                 <li class="text-grey-darker text-sm font-medium">Sentence: event</li>
                                 <li class="text-grey-darker text-sm font-medium">Sentence: event</li>
                                 <li class="text-grey-darker text-sm font-medium">Sentence: event</li>
-                            </ul>
-                            <div class="flex justify-between">
-                                <h6 class="mb-2 text-xs text-grey-dark">Posted: <span class="inline-block text-blue">latest</span></h6>
-                                <h6 class="mb-2 text-xs text-grey-dark">Original: <span class="inline-block text-blue">old</span></h6>
+                                </ul> #}
+                                <div class="flex justify-between">
+                                    <h6 class="mb-2 text-xs text-gray-600">Posted: <span class="inline-block text-blue">latest</span></h6>
+                                    <h6 class="mb-2 text-xs text-gray-600">Original: <span class="inline-block text-blue">old</span></h6>
+                                </div>
+                                <div class="absolute top-0 right-0 mt-2 mr-3">
+                                    <svg class="fill-current text-black hover:text-gray-500 cursor-pointer inline-block h-4 w-4" viewBox="0 0 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                        <g id="Page-1" stroke="none" stroke-width="1" fill-rule="evenodd">
+                                            <g id="icon-shape">
+                                                <polygon id="Combined-Shape" points="10 8.58578644 2.92893219 1.51471863 1.51471863 2.92893219 8.58578644 10 1.51471863 17.0710678 2.92893219 18.4852814 10 11.4142136 17.0710678 18.4852814 18.4852814 17.0710678 11.4142136 10 18.4852814 2.92893219 17.0710678 1.51471863 10 8.58578644"></polygon>
+                                            </g>
+                                        </g>
+                                    </svg>
+                                </div>
                             </div>
                             {# Messages #}
-                            <div class="">
+                            <div class="shadow-lg pt-8 p-3 rounded bg-beige -mt-10 mb-3">
                                 <div class="">
-                                    <div class="flex justify-between">
-                                        <h6 class="mb-2 text-xs text-grey-dark">Posted: <span class="inline-block text-blue">latest</span></h6>
-                                        <h6 class="mb-2 text-xs text-grey-dark">Original: <span class="inline-block text-blue">old</span></h6>
-                                    </div>
                                     <p class="mb-6 text-grey-darker font-medium text-sm bg-grey-lightest">This code does not require any special libraries (like jQuery).</p>
+                                    <div class="flex justify-between">
+                                        <h6 class="mb-2 text-xs text-gray-600">Posted: <span class="inline-block text-blue">latest</span></h6>
+                                        <h6 class="mb-2 text-xs text-gray-600">Original: <span class="inline-block text-blue">old</span></h6>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                         {# Reply to Thread #}
-                        <div>
-                            <h5 class="text-blue text-xs text-wide tracking-wide font-bold uppercase mb-2">My Response</h5>
-                            <textarea class="text-sm appearance-none block w-full text-grey-darker border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white" id="story" name="story" rows="5" cols="33"></textarea>
+                        <div class="shadow-lg pt-6 p-3 rounded bg-white mb-6 border-t-2 border-blue-400">
+                            <h5 class="text-black text-xs text-wide tracking-wide font-bold uppercase mb-2">My Response</h5>
+                            <textarea class="text-sm bg-white appearance-none block w-full text-grey-darker border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white" id="story" name="story" rows="5" cols="33"></textarea>
+                            <a href="" class="inline-block bg-blue-400 hover:bg-gray-100 text-gray-800 font-semibold py-1 px-4 border border-gray-400 rounded shadow">Submit</a>
+                            <a href="" class="inline-block font-bold text-sm py-2 px-4">Delete</a>
                         </div>
-                        <a href="" class="inline-block bg-iron uppercase font-bold text-sm py-2 mb-3">Submit</a>
-                        <a href="" class="inline-block uppercase font-bold text-sm py-2 mb-3">Delete</a>
                     </div>
                 </aside>
             </section>
@@ -82,7 +94,7 @@ layout: default
     <div class="fixed flex justify-between bottom-0 right-0 w-3/4 py-5 px-6 bg-white border-t-2 border-iron">
         <a href="/narratives/narratives-1/questions{{ prev }}" class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Previous</a>
         <div class="w-full mx-8 flex justify-center">
-            <div class="flex w-full pb-3">
+            <div class="flex w-full">
 
                 {% for post in collections.question %}
 
