--- a/site/includes/components/question-inputs.njk
+++ b/site/includes/components/question-inputs.njk
@@ -9,6 +9,15 @@
     </div>
   </div>
   <div class="flex flex-wrap -mx-3 mb-6">
+    <div class="w-2/3 px-3 mb-6 md:mb-0">
+      <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-first-name">
+        Time Frame
+      </label>
+      <input name='basic' value='Headache, COPD, Fall' type="text">
+      <p class="text-red-500 text-xs italic">Please fill out this field.</p>
+    </div>
+  </div>
+  <div class="flex flex-wrap -mx-3 mb-6">
     <div class="w-2/3 px-3">
       <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-password">
         Your Response
