--- a/site/includes/components/question-inputs.njk
+++ b/site/includes/components/question-inputs.njk
@@ -1,31 +1,92 @@
 <form class="w-full">
-  <div class="flex flex-wrap -mx-3 mb-6">
-    <div class="w-1/2 px-3 mb-6 md:mb-0">
-      <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-first-name">
-        Time Frame
+  {% if input === "freeform" %}
+    <div class="flex flex-wrap -mx-3 mb-6">
+      <div class="w-2/3 px-3 mb-6 md:mb-0">
+        <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-first-name">
+        Tags
       </label>
-      <input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-red-500 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white" id="grid-first-name" type="text" placeholder="X Months or X Days ago">
-      <p class="text-red-500 text-xs italic">Please fill out this field.</p>
+        <input name='basic' value='Headache, COPD, Fall' type="text">
+        <p class="text-gray-600 text-xs italic">Please fill out this field.</p>
+      </div>
     </div>
-  </div>
-  <div class="flex flex-wrap -mx-3 mb-6">
-    <div class="w-2/3 px-3 mb-6 md:mb-0">
-      <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-first-name">
-        Time Frame
-      </label>
-      <input name='basic' value='Headache, COPD, Fall' type="text">
-      <p class="text-red-500 text-xs italic">Please fill out this field.</p>
-    </div>
-  </div>
-  <div class="flex flex-wrap -mx-3 mb-6">
-    <div class="w-2/3 px-3">
-      <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-password">
+    <div class="flex flex-wrap -mx-3 mb-6">
+      <div class="w-2/3 px-3">
+        <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-password">
         Your Response
       </label>
-      <textarea class="text-sm appearance-none block w-full text-grey-darker border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white" id="story" name="story" rows="5" cols="33"></textarea>
-      <p class="text-gray-600 text-xs italic">Make it as long and as crazy as you'd like</p>
+        <textarea class="text-sm appearance-none block w-full text-grey-darker border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white" id="story" name="story" rows="5" cols="33"></textarea>
+        <p class="text-gray-600 text-xs italic">Make it as long and as crazy as you'd like</p>
+      </div>
     </div>
-  </div>
+  {% elif input === "boolean" %}
+    <div class="flex flex-wrap -mx-3 mb-6">
+      <div class="w-1/2  px-3 mb-6 md:mb-0">
+        <label class="block uppercase tracking-wide text-grey-darker text-xs font-bold mb-2" for="grid-state">Yes or No?</label>
+        <label class="text-xl text-grey-dark mr-2" for="1">No</label>
+        <div class="form-switch inline-block align-middle">
+          <input type="checkbox" name="1" id="1" class="form-switch-checkbox"/>
+          <label class="form-switch-label" for="1"></label>
+        </div>
+        <label class="text-xl text-grey-dark" for="1">Yes</label>
+      </div>
+    </div>
+  {% elif input === "date" %}
+    <div class="flex flex-wrap -mx-3 mb-6">
+      <div class="w-1/2  px-3 mb-6 md:mb-0">
+        <div class="flex">
+          <div class="w-1/2 mr-4">
+            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-first-name">Event Start Date</label>
+            <input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-red-500 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white"  type="date" id="start" name="trip-start" value="2018-07-22">
+          </div>
+          <div class="w-1/2">
+            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-first-name">Event End Date</label>
+            <input class="w-1/2 appearance-none block w-full bg-gray-200 text-gray-700 border border-red-500 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white"  type="date" id="start" name="trip-start" value="">
+          </div>
+        </div>
+        <p class="w-full text-red-500 text-xs italic">Please fill out this field.</p>
+      </div>
+    </div>
+    <div class="flex flex-wrap -mx-3 mb-6">
+      <div class="w-2/3 px-3 mb-6 md:mb-0">
+        <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-first-name">
+        Tags
+      </label>
+        <input name='basic' value='Headache, COPD, Fall' type="text">
+        <p class="text-red-500 text-xs italic">Please fill out this field.</p>
+      </div>
+    </div>
+    <div class="flex flex-wrap -mx-3 mb-6">
+      <div class="w-2/3 px-3">
+        <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-password">
+        Your Response
+      </label>
+        <textarea class="text-sm appearance-none block w-full text-grey-darker border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white" id="story" name="story" rows="5" cols="33"></textarea>
+        <p class="text-gray-600 text-xs italic">Make it as long and as crazy as you'd like</p>
+      </div>
+    </div>
+  {% elif input === "number" %}
+    <div class="flex flex-wrap -mx-3 mb-6">
+      <div class="w-1/2 px-3 mb-6 md:mb-0">
+        <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-first-name">
+        Enter Number
+      </label>
+        <input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-red-500 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white" type="number" placeholder="18" id="" name="" min="10" max="100">
+        <p class="text-red-500 text-xs italic">Please fill out this field.</p>
+      </div>
+    </div>
+  {% elif input === "simple" %}
+    <div class="flex flex-wrap -mx-3 mb-6">
+      <div class="w-full px-3 mb-6 md:mb-0">
+        <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-first-name">
+        Your Response
+      </label>
+        <input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-red-500 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white" id="grid-first-name" type="text" placeholder="X Months or X Days ago">
+        <p class="text-red-500 text-xs italic">Please fill out this field.</p>
+      </div>
+    </div>
+  {% else %}
+  I am not specified
+{% endif %}
   <div class="w-2/3 flex justify-end border-t-2 border-iron pt-4">
     <button class="bg-white mr-4 hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Cancel</button>
     <button class="bg-blue-400 hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Save</button>
